--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,8 @@
 </head>
 
 <body>
-
+  <a href="mailto:mdeeds@gmail.com?&subject=Email+from_Oculus.&body=Testing+testing_testing!" target="_top">Send
+    mail!</a>
 </body>
 
 </html>
